Implement macro service